// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      3
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-7x0ld1"
      />
      <li
        class="css-7x0ld1"
      />
      <li
        class="css-7x0ld1"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      1
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-7x0ld1"
      />
      <li
        class="css-10pketk"
      />
      <li
        class="css-10pketk"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="css-tgbw37"
    >
      2
    </span>
    <ul
      class="css-xa5o6q"
    >
      <li
        class="css-7x0ld1"
      />
      <li
        class="css-7x0ld1"
      />
      <li
        class="css-10pketk"
      />
    </ul>
  </div>
</DocumentFragment>
`;
